# dorAImon

./: .env.template  Dockerfile  README.md  app.py  capture_audio.py  pyproject.toml  test.py
doraimon/: azure_openai_service.py  azure_openai_whisper_service.py  pdf_parse_service.py  prompt_solution_service.py
templates/: cv_summary.html  index.html  job_fit.html  upload_resume.html
templates/layout/: base.html
